--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Undangan Kaka & OmJen 💌</title>
-    <link rel="stylesheet" href="STYLE.CSS" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -21,6 +21,6 @@
     Maaf, browser kamu tidak mendukung audio.
 </audio>
 
-<script src="SCRIPT.JS"></script>
+<script src="script.js"></script>
 </body>
 </html>
