--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Undangan Kaka & OmJen 💌</title>
+    <title>Tika & Zaini Wedding Invitation</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<div class="video-container">
-    <video id="mainVideo" autoplay muted loop playsinline>
+    <div class="video-container">
+    <video id="weddingVideo" autoplay muted loop playsinline>
     <source src="assets/videos/undangan-kaka-omJen.mp4" type="video/mp4" />
-    Maaf, browser kamu tidak mendukung video ini.
+    Browser kamu tidak mendukung video.
     </video>
-</div>
+    </div>
 
-<!-- Audio Background -->
-<audio id="bgMusic" autoplay loop>
-    <source src="assets/audio/backsound.mp3" type="audio/mpeg">
-    Maaf, browser kamu tidak mendukung audio.
+<audio id="music" autoplay loop>
+    <source src="assets/audio/backsound.mp3" type="audio/mpeg" />
+    Browser kamu tidak mendukung audio.
 </audio>
 
 <script src="script.js"></script>
