fix layouting revision 2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div id="startOverlay" class="start-overlay">
+    <button id="startButton">Buka Undangan</button>
+    </div>
+
     <div class="video-container">
     <video id="weddingVideo" autoplay muted loop playsinline>
     <source src="assets/videos/undangan-kaka-omJen.mp4" type="video/mp4" />
@@ -14,10 +18,10 @@
     </video>
     </div>
 
-<audio id="music" autoplay loop>
+    <audio id="music" autoplay loop>
     <source src="assets/audio/backsound.mp3" type="audio/mpeg" />
     Browser kamu tidak mendukung audio.
-</audio>
+    </audio>
 
 <script src="script.js"></script>
 </body>
